RESOLVED FIXED173782
Stop passing Vector by value in WebProcessProxy::deleteWebsiteDataForTopPrivatelyControlledDomainsInAllPersistentDataStores()
https://bugs.webkit.org/show_bug.cgi?id=173782
Summary Stop passing Vector by value in WebProcessProxy::deleteWebsiteDataForTopPriva...
Chris Dumez
Reported 2017-06-23 12:39:45 PDT
Stop passing Vector by value in WebProcessProxy::deleteWebsiteDataForTopPrivatelyControlledDomainsInAllPersistentDataStores().
Attachments
Patch (5.06 KB, patch)
2017-06-23 13:01 PDT, Chris Dumez
no flags
Patch (5.15 KB, patch)
2017-06-23 13:21 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2017-06-23 13:01:31 PDT
Build Bot
Comment 2 2017-06-23 13:03:35 PDT
Attachment 313736 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/WebProcessProxy.h:144: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/UIProcess/WebProcessProxy.cpp:212: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 2 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brent Fulgham
Comment 3 2017-06-23 13:08:44 PDT
Comment on attachment 313736 [details] Patch LGTM. r=me (but please fix the style warning). Also, please confirm EWS is happy.
Chris Dumez
Comment 4 2017-06-23 13:09:52 PDT
(In reply to Brent Fulgham from comment #3) > Comment on attachment 313736 [details] > Patch > > LGTM. r=me (but please fix the style warning). Also, please confirm EWS is > happy. I don't think I agree with the style checker here.
WebKit Commit Bot
Comment 5 2017-06-23 13:16:36 PDT
Comment on attachment 313736 [details] Patch Rejecting attachment 313736 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'apply-attachment', '--no-update', '--non-interactive', 313736, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: nk #1 succeeded at 1 with fuzz 3. patching file Source/WebKit2/UIProcess/WebProcessProxy.cpp patching file Source/WebKit2/UIProcess/WebProcessProxy.h Hunk #1 FAILED at 141. 1 out of 1 hunk FAILED -- saving rejects to file Source/WebKit2/UIProcess/WebProcessProxy.h.rej patching file Source/WebKit2/UIProcess/WebResourceLoadStatisticsStore.cpp Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Brent Fulgham']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output: http://webkit-queues.webkit.org/results/3985706
Chris Dumez
Comment 6 2017-06-23 13:21:01 PDT
Build Bot
Comment 7 2017-06-23 13:23:29 PDT
Attachment 313738 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/WebProcessProxy.h:144: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/UIProcess/WebProcessProxy.cpp:212: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 2 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 8 2017-06-23 15:50:08 PDT
Comment on attachment 313738 [details] Patch Clearing flags on attachment: 313738 Committed r218769: <http://trac.webkit.org/changeset/218769>
WebKit Commit Bot
Comment 9 2017-06-23 15:50:10 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.