Stop passing Vector by value in WebProcessProxy::deleteWebsiteDataForTopPrivatelyControlledDomainsInAllPersistentDataStores() https://bugs.webkit.org/show_bug.cgi?id=173782

Reviewed by Brent Fulgham.

* UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::deleteWebsiteDataForTopPrivatelyControlledDomainsInAllPersistentDataStores):
* UIProcess/WebProcessProxy.h:
* UIProcess/WebResourceLoadStatisticsStore.cpp:
(WebKit::WebResourceLoadStatisticsStore::removeDataRecords):


Canonical link: https://commits.webkit.org/190650@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218769 268f45cc-cd09-0410-ab3c-d52691b4dbfc